k8s-demo-manifest/services/webserver-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebserver
  labels: 
    app: httpd
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: httpd
  template: 
    metadata:
      labels: 
        app: httpd
    spec: 
      containers:
        - name: myhttpd
          image: httpd
          ports:
            - containerPort: 80  
---
apiVersion: v1  
kind: Service
metadata:
  name: myweb-svc
spec:
  type: NodePort 
  selector:
    app: httpd
  ports:
    - nodePort: 30124 
      port: 80 
      targetPort: 80
