k8s-demo-manifest/services/ingress-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb-dep
  labels: 
    app: httpd
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: httpd
  template: 
    metadata:
      labels: 
        app: httpd
    spec: 
      containers:
        - name: myhttpd
          image: httpd
          ports:
            - containerPort: 80  
---
apiVersion: v1  
kind: Service
metadata:
  name: myweb-svc
spec:
  selector:
    app: httpd
  ports:
    - port: 80 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minikube-example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myweb-svc
              port:
                number: 80
